# zinc

./: .gitignore  .travis.yml  Cargo.toml  Makefile  Makefile.in  README.md  Rakefile  build.rs  configure  configure.ac  target.json.in  thumbv7m-none-eabi.json
ioreg/: Cargo.toml
ioreg/src/: lib.rs
ioreg/src/builder/: accessors.rs  getter.rs  mod.rs  register.rs  setter.rs  union.rs  utils.rs
ioreg/tests/: test.rs
macro_platformtree/src/: lib.rs
platformtree/: Cargo.toml
platformtree/src/: test_helpers.rs
src/: lib.rs
src/drivers/: chario.rs  dht22.rs
src/drivers/lcd/: mod.rs
src/hal/: isr.rs
src/hal/cortex_m3/: isr.rs
src/hal/lpc17xx/: peripheral_clock.rs  pin.rs  platformtree.rs  uart.rs
src/hal/tiva_c/: sysctl.rs
src/util/: volatile_cell.rs
support/svd/: README.md  requirements.txt  svdconvert.py
support/svd/data/Freescale/: MK20D5.xml
support/svd/svdconverter/: model.py  parser.py
support/svd/svdconverter/generators/: zinc_ioregs.py
support/svd/svdconverter/tests/: test_parser.py
