[package]
name = "zinc"
version = "0.1.0"
authors = ["Zinc Developers <zinc@github.com>"]

[lib]
name = "zinc"
crate-type = ["lib"]

[features]
mcu_lpc17xx = []
mcu_stm32f4 = []
mcu_stm32l1 = []
mcu_k20 = []
mcu_tiva_c = []

[dependencies.ioreg]
path = "./ioreg"

[dependencies.rlibc]
version = "*"

[[example]]
name = "blink_stm32f4"
path = "examples/app_blink_stm32f4.rs"
